# acutter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  poetry.toml  pyproject.toml  rtool.py  setup.cfg  setup.py
.github/workflows/: ci.yml
acutter/: cli.py
cookiecutter-pyproject/: README.md
docs/: conf.py  index.md  installation.md  todo.md  tutorial.md  usage.md
hooks/: post_gen_project.py
templates/python_package/: cookiecutter.json
templates/python_package/hooks/: post_gen_project.py
templates/python_package/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
templates/python_package/{{cookiecutter.project_name}}/docs/: conf.py
templates/python_package/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py
tests/: test_bake_project.py  test_hooks.py
{{cookiecutter.project_name}}/: .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  make.py  pyproject.toml  rtool.py  run.py  setup.py
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/docs/: index.md  installation.md
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
