[project]
name = "cookiecutter-pyproject"
version = "0.1.0"
description = "Cookie cutter for exploratory projects"
authors = [{ name = "Roman Chyla", email = "roman.chyla@gmail.com" }]

dependencies = [
    'cookiecutter>=1.7.3',
    'click==8.0.3',
    'toml==0.10.2',
]


[project.optional-dependencies]
dev = [
    'black==21.11b1',
    'flake8==4.0.1',
    'isort==5.10.1',
    'pytest==6.2.5',
    'pyupgrade==2.29.1',
    'pytest-mock==3.6.1',
    'pre-commit==2.16.0',
    'coveralls==3.3.1',
    'mock==4.0.3',
    'coverage==6.2',
    'pytest-cov==3.0.0',
    'pytest-cookies==0.6.1',
    'ppsetuptools==2.0.2'
]

[tool.isort]
profile = "black"
known_first_party = ["{{ cookiecutter.package_name }}", "hooks", "tests"]

[tool.pytest.ini_options]
addopts = "-v -Wdefault"
testpaths = "tests/"

[build-system]
requires = ["setuptools >= 58.6.0", "wheel", "flit_core >=3.2,<4", "ppsetuptools==2.0.2"]
build-backend = "flit_core.buildapi"
#build-backend = "setuptools.build_meta"

# see setup.py for explanation of these
[xsetup.entry_points]
console_scripts = [
    "rtool=rtool:cli"
]
[xsetup]
scripts = [
]
